# advent-of-code

./: .gitignore  CLAUDE.md  LICENSE  pyproject.toml
d1/: main.py  test.py
d2/: test.py
tools/: decorators.py  file.py  itertools.py  math.py  mypyc.py  time.py
tools/datastructures/: bitarray2d.py  intersections.py  points.py
y2025/d1/: main.py  test.py
y2025/d10/: main.py  setup.py  test.py
y2025/d11/: main.py  test.py
y2025/d12/: benchmark_can_place.py  benchmark_place.py  main.py  test.py  test_helpers.py
y2025/d2/: main.py  test.py
y2025/d3/: main.py  test.py
y2025/d4/: main.py  test.py
y2025/d5/: main.py  test.py
y2025/d6/: main.py  test.py
y2025/d7/: main.py  test.py
y2025/d8/: main.py  test.py
y2025/d9/: main.py  test.py
