[project]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = [
    {name = "Martin Milota",email = "martin.milota@chargedmonkey.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "more-itertools (>=10.8.0,<11.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
