[project]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = [
    {name = "Martin Milota",email = "martin.milota@chargedmonkey.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "more-itertools (>=10.8.0)",
    "tools (>=1.0.15,<2.0.0)",
    "mypy (>=1.19.0,<2.0.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "bitarray2d (>=2.1,<3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
